# docs/swagger.yaml
@@ -111,11 +111,7 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "401":
-          description: Incorrect Password
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "404":
-          description: Email Not Found
+          description: Incorrect Email or Password
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
@@ -138,7 +134,7 @@ paths:
               $ref: '#/definitions/model.Template'
             type: array
         "500":
-          description: Database Query Error
+          description: Unexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Get all templates
@@ -167,7 +163,7 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
-          description: Database Query Error
+          description: Unexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Create new template
@@ -194,7 +190,7 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
-          description: Database Query Error
+          description: Unexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Delete template
@@ -224,11 +220,11 @@ paths:
           schema:
             $ref: '#/definitions/model.SuccessResponse'
         "400":
-          description: Request Parse Error
+          description: Invalid ID / Request Parse Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
-          description: Database Query Error
+          description: Unexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Update template
@@ -249,8 +245,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/model.SuccessResponse'
         "400":
@@ -258,7 +254,7 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
-          description: Database Query Error
+          description: Uexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Create workspace
@@ -281,11 +277,11 @@ paths:
           schema:
             $ref: '#/definitions/model.SuccessResponse'
         "400":
-          description: Illegal Workspace ID
+          description: Invalid ID
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
-          description: Database Query Error
+          description: Unexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Delete workspace
@@ -307,11 +303,11 @@ paths:
           schema:
             $ref: '#/definitions/model.Workspace'
         "400":
-          description: Illegal Workspace ID
+          description: Invalid ID
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
-          description: Workspace Not Found
+          description: Unexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Get workspace by ID
@@ -341,11 +337,11 @@ paths:
           schema:
             $ref: '#/definitions/model.SuccessResponse'
         "400":
-          description: Request Parse Error
+          description: Invalid ID / Request Parse Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
-          description: Database Query Error
+          description: Unexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Update workspace
@@ -371,11 +367,11 @@ paths:
               $ref: '#/definitions/model.Workspace'
             type: array
         "400":
-          description: Illegal User ID
+          description: Invalid ID
           schema:
             $ref: '#/definitions/model.ErrorResponse'
         "500":
-          description: Database Query Error
+          description: Unexpected System Error
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Get all workspaces by user
